--- a/styles/responsive/header.css
+++ b/styles/responsive/header.css
@@ -1,14 +1,39 @@
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
     body .wrapper header {
         height: 95px;
     }
 
     body .wrapper header nav a {
-        font-size: 18px;
+        font-size: 16px;
         padding: 0 5px 0 5px;
     }
 
     .title {
-        font-size: 18px;
+        font-size: 16px;
+    }
+}
+
+
+@media (max-width: 650px) {
+    body .wrapper header {
+        height: 150px;
+    }
+
+    body .wrapper header nav {
+        height: 75%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    body .wrapper header nav a {
+        font-size: 14px;
+        padding: 0 5px 0 5px;
+    }
+
+    .title {
+        height: 25%;
+        font-size: 13px;
     }
 }
