--- a/styles/proposedNews.css
+++ b/styles/proposedNews.css
@@ -78,6 +78,8 @@ body main .proposedNews {
 .imgStyle {
     border-radius: 20px;
     box-shadow: 0px 0px 1px 1px gray;
+    max-height: 140px;
+    width: auto;
 }
 
 
